--- a/package.json
+++ b/package.json
@@ -9,18 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.3",
     "@types/node": "20.2.3",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
-    "next": "13.4.3",
-    "postcss": "8.4.23",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "^15.2.4",
+    "postcss": "^8.4.23",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-icons": "^4.8.0",
-    "tailwindcss": "3.3.2",
+    "tailwindcss": "^4.1.3",
     "typescript": "5.0.4"
   }
 }
